test/semantic_errors/invalid_unaryop3.mc
void main() {
    int a;
    bool c;
    c = !a;
}